--- a/contact/index.html
+++ b/contact/index.html
@@ -13,22 +13,25 @@
     
 
     <meta name="author" content="Yash R Chhabria">
-    <meta name="description" content="Me siga em @joaoninguem.">
+    <meta name="description" content="Email: ychhabri@ucsc.edu
+Phone: 669-293-0369">
     <meta name="keywords" content="blog,developer,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Contato"/>
-<meta name="twitter:description" content="Me siga em @joaoninguem."/>
+<meta name="twitter:title" content="Contact"/>
+<meta name="twitter:description" content="Email: ychhabri@ucsc.edu
+Phone: 669-293-0369"/>
 
-    <meta property="og:title" content="Contato" />
-<meta property="og:description" content="Me siga em @joaoninguem." />
+    <meta property="og:title" content="Contact" />
+<meta property="og:description" content="Email: ychhabri@ucsc.edu
+Phone: 669-293-0369" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.example.com/contact/" />
 
 
 
     <title>
-  Contato · Portfolio
+  Contact · Portfolio
 </title>
 
     
@@ -124,12 +127,13 @@
     <header>
       <h1 class="title">
         <a class="title-link" href="http://www.example.com/contact/">
-          Contato
+          Contact
         </a>
       </h1>
     </header>
 
-    <p>Me siga em @joaoninguem.</p>
+    <p>Email: <a href="mailto:ychhabri@ucsc.edu">ychhabri@ucsc.edu</a></p>
+<p>Phone: 669-293-0369</p>
 
   </article>
 </section>
