--- a/jayposts/hugo-coder-wiki/index.html
+++ b/jayposts/hugo-coder-wiki/index.html
@@ -17,10 +17,10 @@
     <meta name="keywords" content="blog,developer,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="External Page: Hugo Coder Wiki"/>
+<meta name="twitter:title" content="Página Externa: Wiki Hugo Coder"/>
 <meta name="twitter:description" content=""/>
 
-    <meta property="og:title" content="External Page: Hugo Coder Wiki" />
+    <meta property="og:title" content="Página Externa: Wiki Hugo Coder" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.example.com/jayposts/hugo-coder-wiki/" />
@@ -29,7 +29,7 @@
 
 
     <title>
-  External Page: Hugo Coder Wiki · Portfolio
+  Página Externa: Wiki Hugo Coder · Portfolio
 </title>
 
     
@@ -125,7 +125,7 @@
     <header>
       <h1 class="title">
         <a class="title-link" href="http://www.example.com/jayposts/hugo-coder-wiki/">
-          External Page: Hugo Coder Wiki
+          Página Externa: Wiki Hugo Coder
         </a>
       </h1>
     </header>
